- Fixed asynchronous playback of large sound files in wxSound.
- Added wxDynamicLibrary::GetSymbolAorW().
- Fixed default size of wxStaticText controls with border being too small.
- Fixed bugs with wxStatusBar positioning (with or withour sizers) (Jamie Gadd)
- Mouse move events are now generated for all static controls (Jamie Gadd)
- Made wxJoystick::GetProductName() more useful (John Ratliff)

wxGTK:

- ShowFullScreen() shows the window if it was still hidden (rpedroso).
- Implemented wxTopLevelWindow::RequestUserAttention() (Mart Raudsepp).
- Base library is now binary compatible when built with wxGTK and wxMotif.
- wxTextCtrl::XYToPosition, PositionToXY and GetLineLength calls are now
  instantaneous in case of GTK 2.x multi-line controls (Mart Raudsepp).
- Added support for left, centre and right text alignment attributes under
  GTK+2 multi-line text controls (Mart Raudsepp).
- Various wxFont improvements for GTK 2.x builds (Mart Raudsepp).

wxMac:

- Automatic menu management improved.
- Fixed crash when wxRadioButton is deleted from a group of radio buttons,
  due to dangling cycle pointers.

wxOS2

- Adjustments for building with Open Watcom C++.

wxUniv:

- Window creation now honours wxVSCROLL.
- Standalone scrollbars generate events of correct type (Jochen Roemmler).

wxMotif:

- Base library is now binary compatible when built with wxGTK and wxMotif.
- wxMotif can now display Japanese text under Japanese locale.
- Fixed button size in common dialogs.
- Made wxFileDialog translatable.
- All top level windows should now have a border unless the wxNO_BORDER
  flag has been specified.
- Improved wxNotebook support for sizers. It requires the wxNotebook to
  be created with a "sensible" initial width.

wxMGL:

- Fixed crash on exit.
- Fixed drawing problems when windows are resized.

wxX11:

- Various wxFont improvements for unicode builds (Mart Raudsepp).


2.6.1
-----

All:

- Added wxLaunchDefaultBrowser.